objects/Product_Specialty__c.object
<CustomObject>
    <description>Specialty Object- Main parent object for the Specialty Functionality.</description>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Specialty_search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Specialty search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Quest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty_Code__c</fullName>
        <externalId>true</externalId>
        <label>Specialty Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Specialty</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Specialty_Code__c</columns>
        <columns>Source__c</columns>
        <columns>Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Specialty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>